// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI/Component <PriceLabel {...} /> Should render the both prices 1`] = `
<div>
  <div
    class="space-x-2"
  >
    <span
      class="price-label-old line-through text-sm"
    >
      $38.61
    </span>
    <span
      class="price-label-old"
    >
      /
    </span>
    <span
      class="price-label"
    >
      $34.20
    </span>
  </div>
</div>
`;

exports[`UI/Component <PriceLabel {...} /> Should render the default state 1`] = `
<div>
  <div
    class=""
  >
    <span
      class="price-label"
    >
      €34.20
    </span>
  </div>
</div>
`;
